--- a/gb/23/9/11/n14071255.md
+++ b/gb/23/9/11/n14071255.md
@@ -19,10 +19,6 @@
 <h3>了解更多<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>即时要闻及生活资讯，请点击 <ahref="http://dajiyuan.com.au">dajiyuan.com.au</a></h3>
 <p>（本文未经许可不得转载或建立镜像网站）</p>
 <p>&nbsp;</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/23/n13808026.md#1">澳两大超市数百商品降价 缓解生活压力</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13846978.md#1">瑞银：澳两大超市食品通胀率高达8%</a></li>
@@ -32,39 +28,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14064984.md#1">利润大增 澳两大超市宣布数百种商品降价</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065098.md#1">Woolworths推出会员价 区别定价惹争议</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066536.md#1">自助结账体验不悦 新州老妇不再光顾Woollies</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071271.md#1">工党绿党达成共识 百亿住房基金法案即将通过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071234.md#1">英国会间谍案示警 澳议员吁政府审查防风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106419.md#1">遭顾客反对 Woolworths重启网购月度折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106418.md#1">澳洲蔬菜价格几近减半 顾客莫失购买良机</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067434.md#1">【杨延昭传奇】乱世中的命定姻缘（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065739.md#1">做好事遭污名他却不辩解  到底是为了什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气养生小心哪些禁忌？“补露”怎么补？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070508.md#1">【时事金扫描】深圳泄洪淹香港？王芳激怒乌克兰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070625.md#1">【菁英论坛】疫情再起 核污染甩锅雷暴哮喘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14071030.md#1">【舞蹈三剑客】神韵领舞演员舞蹈包的7大必备物品 Feat. 王琛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070482.md#1">【内幕】火箭军司令部被一锅端的背后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070342.md#1">许家印不利消息频传 分析：恒大涉习曾权斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070041.md#1">李强曝中共培养东盟领导人计划 网友称可怕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069882.md#1">周杰伦天津开唱发生意外 困于旋转球呕吐摔伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069974.md#1">带吸氧装置西安开唱 五月天阿信憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069171.md#1">胡歌宣传新片谈过世母亲：仍会给她发微信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069917.md#1">容祖儿暴雨中驾车如驾船 蔡卓妍惊呼“恐怖”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069669.md#1">乔治·克隆尼千万美元买进的别墅 以1.07亿售出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061655.md#1">为何养成这8个生活习惯能帮你延寿几十年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070034.md#1">喝咖啡或致胆固醇超标 研究发现1喝法最健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069972.md#1">COVID-19重症住院后 这些癌症风险倍增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069211.md#1">【雪说健康】食糖上瘾如毒药 专家简单4招摆脱糖瘾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070311.md#1">饲主能让小狗独处多久？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/11/n14071255.htm">Woolworths降低店内取现限额 从500元降至200元</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071255.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
