--- a/gb/23/8/24/n14060251.md
+++ b/gb/23/8/24/n14060251.md
@@ -6,8 +6,8 @@
 <h6>阿根廷总统初选结果出炉，由“阿根廷川普”之称的极右翼自由主义者候选人米雷伊（中）获胜。资料照。（ALEJANDRO PAGNI/AFP via Getty Images）
 </h6>
 <hr>
-<p>【大纪元2023年08月24日讯】（大纪元记者赖玟茹台湾台北报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%88%9D%E9%80%89.md#1">总统初选</a>结果出炉，由“阿根廷川普”之称的极右翼自由主义者候选人米雷伊（Javier Milei）获胜，将顺利进入10月举行的第一轮总统选举。台外交部拉丁美洲司长郑力城24日在例会上表示，“得票率前三大的阵营我们都有接触”，未来也会保持良好接触，让其了解台湾积极和阿根廷发展实质关系的意愿。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>在8月13日举办<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%88%9D%E9%80%89.md#1">总统初选</a>，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B3%E6%B4%BE.md#1">右派</a>自由经济学家、自由前进党（La Libertad Avanza）的米雷伊成为最高票赢家，赢得超过30%的选票，突显阿根廷民众期待有别传统的改变，阿根廷媒体称为米雷伊现象正在发酵。</p>
+<p>【大纪元2023年08月24日讯】（大纪元记者赖玟茹台湾台北报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%88%9D%E9%80%89.md#1">总统初选</a>结果出炉，由“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>川普”之称的极右翼自由主义者候选人米雷伊（Javier Milei）获胜，将顺利进入10月举行的第一轮总统选举。台外交部拉丁美洲司长郑力城24日在例会上表示，“得票率前三大的阵营我们都有接触”，未来也会保持良好接触，让其了解台湾积极和阿根廷发展实质关系的意愿。</p>
+<p>阿根廷在8月13日举办<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%88%9D%E9%80%89.md#1">总统初选</a>，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B3%E6%B4%BE.md#1">右派</a>自由经济学家、自由前进党（La Libertad Avanza）的米雷伊成为最高票赢家，赢得超过30%的选票，突显阿根廷民众期待有别传统的改变，阿根廷媒体称为米雷伊现象正在发酵。</p>
 <p>有些外媒将米雷伊比做“阿根廷川普”，米雷伊今年52岁，经济学家出身，曾当过摇滚歌手，且因形象与美国前总统川普相似，外界也将其形容为“阿根廷川普”。他的政治理念跳脱以往，主张废除阿根廷央行，改以美金为货币，关闭所有国营企业或改为民营化，并认为气候变迁是一个谎言，力挺禁止堕胎，</p>
 <p>外媒近日刊登一则专访，文中说明，米雷伊未来将如何处理阿根廷的国际事务。当被问及，如何看待阿根廷第二大贸易伙伴中国的关系时，他说，不会与中国及共产主义分子做生意，强调阿根廷首要任务是应与“文明的一方”，也就是西方做生意，像是美国。</p>
 <p>米雷伊在访问中表示，因为在中国，人们并不自由，也不能做他们想做的事情，若真的这样做，有可能会被杀害，并反问记者“你会和杀人犯（asesino）做生意吗？”</p>
@@ -15,10 +15,6 @@
 <p>郑力城说，未来将持续关注阿根廷大选的后续情况，也可以很明确的跟各位说，“得票率前三大的阵营我们都有接触”，未来也会保持良好接触，让其了解台湾积极和阿根廷发展实质关系的意愿。</p>
 <p>阿根廷总统初选为强制性选举，初选由选民票选出各党10月总统大选的候选人，若10月候选人得票数比率未超过45%选票，或少于40%选票且未胜过第二候选人10%，即须在11月进行第二轮投票。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/4/n13838921.md#1">林辉：说毛不爱看人民日报 记者被打成右派</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010438.md#1">林辉： 四次越狱奔自由 右派徐洪慈书写传奇</a></li>
@@ -27,40 +23,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055370.md#1">阿根廷大选领跑者：若当选将冻结与北京关系</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057814.md#1">川普：不会参加共和党总统初选首场辩论</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058887.md#1">【名家专栏】阿根廷由社会主义转向自由主义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059693.md#1">柯文哲：金门是和平试验好地方</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059677.md#1">郭台铭金门提和平宣言 遭基进呛卖台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059656.md#1">中共中断ECFA 台工商界：对经济面影响有限</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105870.md#1">蓝白政党协商达立委席次最大化共识 总统人选还待谈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105412.md#1">富士康遭查税 分析：关键原因是中共内斗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105413.md#1">谁最希望“蓝白合”？赖清德：“魔镜”必说中共</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/7/4/n9355207.md#1" target="_blank">一位美国微软工程师修炼法轮功的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056246.md#1">【未解之谜】上古通天神树 在这里？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056411.md#1">七夕情话响千代  天神护祐得真福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059857.md#1">【菁英论坛】习近平金砖梦难圆 中共战备升级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059443.md#1">【晚间新闻】北京上海门诊爆满 西安医院一号难求</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045671.md#1">【思想领袖】美中在台海开战的可能性及后果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059043.md#1">习近平临时取消南非商业论坛演讲 原因不详</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058950.md#1">因讽习近平入狱 权平驾水上摩托艇逃至韩国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059068.md#1">前央视名嘴崔永元摆摊卖字画 憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059068.md#1">前央视名嘴崔永元摆摊卖字画 憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058450.md#1">《好声音》再被爆黑幕 潘玮柏椅子莫名自转身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058419.md#1">疑宣布退出演艺圈5年不拍戏 胡歌帖文引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059184.md#1">吴凤飞维也纳被拦下 秀中华民国护照秒通关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059041.md#1">“最美小龙女”李若彤57岁生日 推出人生首支歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057951.md#1">巴菲特赌新房建筑商 投8亿买这3家股票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058056.md#1">4种洗澡习惯可能会让你掉头发 赶快改过来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053821.md#1">花生又称长寿果 这样吃可软化血管降血压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058568.md#1">人在太空旅行中死亡 遗体应该如何处理？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058691.md#1">为了能好好休息 登机后要问空服员这个问题</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/24/n14060251.htm">“阿根廷川普”反共 台外交部：持续关注</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060251.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
